# Forecasting-Backorders-In-Inventory

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  demo.py  demo_main.py  docker-compose.yaml  init_setup.sh  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  start.sh  template.py
.github/workflows/: main.yaml  terraform.yaml
Documents/: Architecture Design.docx  DPR.docx  High Level Design.docx  Low Level Design.docx  wireframe.docx
airflow/dags/: prediction_dag.py  training_dag.py
config/: model.yaml  schema.yaml
dags/: training_dag.py
infrastructure/: module.tf
infrastructure/backorder_artifact_bucket/: model.tf  model_policy.tf  variables.tf
infrastructure/backorder_ec2/: app_sg.tf  variables.tf
infrastructure/backorder_ecr/: ecr.tf  variables.tf
infrastructure/backorder_model_bucket/: model.tf  variables.tf
infrastructure/backorder_prediction_bucket/: model.tf  model_policy.tf  variables.tf
notebook/: Forecasting_backorders.ipynb  Forecasting_backorders1.ipynb
src/Backorder/cloud_storage/: s3_syncer.py
src/Backorder/logger/: __init__.py
src/backorder/cloud_storage/: s3_operations.py
src/backorder/components/: __init__.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py  stage_06_model_pusher.py
src/backorder/config/: mongo_client.py  schema.yaml
src/backorder/data_access/: __init__.py
src/backorder/entity/: __init__.py  artifact_entity.py  config_entity.py
templates/: index.html
(+38 files in other folders)
